# wordle-score-tracker

./: README.md  inject.js  popup.html  popup.js
extension/: manifest.json  submitGuess.js
server/: Makefile  pyproject.toml
server/src/wordle_score_server/: app.py
