[tool.poetry]
name = "wordle-score-server"
version = "0.1.0"
description = ""
authors = ["Axel Örn Sigurðsson <dev@absalon.is>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
aiohttp_cors = "^0.7.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
ipython = "^8.0.1"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
